# zeroshot

./: .commitlintrc.json  .gitignore  .jscpd.json  .mocharc.cjs  .mocharc.json  .prettierignore  .releaserc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUSTOMISATIONS.md  Cargo.toml  FIX_TESTS.md  GEMINI.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  build-image.sh  codecov.yml  eslint.config.js  eslint.config.mjs  hooks  package-lock.json  package.json  rustfmt.toml  test-isolated-fix.js  test-metadata-manual.sh  tsconfig.agent-cli-provider.build.json  tsconfig.agent-cli-provider.json  tsconfig.json  tsconfig.tui-backend.json  tsconfig.tui.json
capsule-workspace-core/: Cargo.toml  README.md
capsule-workspace-core/src/: cache.rs  cas.rs  daemon.rs  daemon_loop.rs  gc.rs  gc_pg.rs  ifaces.rs  lib.rs  lineage.rs  main.rs  manifest.rs  pg.rs  refclock.rs  s3.rs  stat_cache.rs
capsule-workspace-core/src/migrations/: 0001_bootstrap.sql
capsule-workspace-core/tests/: adversarial2.rs  adversarial3.rs  audit_independent.rs  blobstore_conformance.rs  cache.rs  daemon.rs  digest_stability.rs  e2e_aws.rs  e6_pipeline.rs  e8_gc.rs  experiments.rs  gc_pg.rs  materialize_bounds.rs  pg_lineage.rs  reflink.rs  resume.rs  sha_backend.rs  stat_skip.rs
crates/openengine-cluster-client/: Cargo.toml
crates/openengine-cluster-client/src/: lib.rs  ndjson_pump.rs  ndjson_watch.rs  watch.rs
crates/openengine-cluster-client/tests/: client.rs  lifecycle.rs  lifecycle_retry.rs  reconnect.rs  subscription_ndjson.rs
crates/openengine-cluster-client/tests/reconnect_support/: mod.rs
crates/openengine-cluster-client/tests/scripted_transport_support/: mod.rs
crates/openengine-cluster-protocol/: Cargo.toml
crates/openengine-cluster-protocol/src/: admission.rs  artifact.rs  canonical.rs  diagnostic.rs  graph.rs  graph_profile.rs  lib.rs  lifecycle.rs  payload.rs  payload_value.rs  value.rs  watch.rs  worker.rs
crates/openengine-cluster-protocol/src/worker/: error.rs  legacy.rs  outcome.rs
crates/openengine-cluster-protocol/tests/: admission.rs  artifact.rs  canonical.rs  capabilities.rs  graph_wire.rs  lifecycle_retry.rs  lifecycle_wire.rs  payload_subtyping.rs  watch.rs  worker.rs
crates/openengine-cluster-server/: Cargo.toml
crates/openengine-cluster-server/src/: admission.rs  graph_verifier.rs  lib.rs  lifecycle.rs  stdio.rs  watch.rs  wire.rs  worker_registry.rs
crates/openengine-cluster-server/src/admission/: errors.rs  ports.rs  snapshot.rs
crates/openengine-cluster-server/src/graph_verifier/: analyzer_assignments.rs  analyzer_bindings.rs  analyzer_bounds.rs  analyzer_guards.rs  analyzer_index.rs  analyzer_maps.rs  analyzer_nodes.rs  analyzer_parallel.rs  analyzer_parallel_flow.rs  analyzer_terminal.rs  assignments.rs  choice.rs  contexts.rs  diagnostics.rs  effects.rs  effects_tree.rs  effects_writes.rs  payload.rs  tests.rs
crates/openengine-cluster-server/src/lifecycle/: ports.rs
crates/openengine-cluster-server/src/stdio/: admission.rs
crates/openengine-cluster-server/src/watch/: fixtures.rs  ports.rs
crates/openengine-cluster-server/tests/: admission.rs  graph_verifier.rs  graph_verifier_boundaries.rs  initialize_capabilities.rs  lifecycle.rs  lifecycle_retry.rs  subscription_ndjson.rs  watch.rs  worker_registry.rs
crates/openengine-cluster-server/tests/graph_verifier/: cases_control.rs  cases_dataflow.rs  cases_parallel.rs  cases_structure.rs  map_regressions.rs  parallel_control_regressions.rs  parallel_definition_regressions.rs  parallel_regressions.rs  regressions.rs
crates/openengine-cluster-testkit/: Cargo.toml
crates/openengine-cluster-testkit/src/: admission.rs  admission_artifacts.rs  artifacts.rs  capability_vectors.rs  fixture.rs  graph_verifier_artifacts.rs  lib.rs  lifecycle.rs  lifecycle_artifacts.rs  negative_graph_fixtures.rs  schema_helpers.rs  watch.rs  watch_artifacts.rs  worker_artifacts.rs  worker_profiles.rs
crates/openengine-cluster-testkit/src/admission/: fixtures.rs  (+2 more)
crates/openengine-cluster-testkit/tests/: admission.rs  admission_races.rs  admission_snapshots.rs  artifacts.rs  capability_vectors.rs  graph_fixtures.rs  graph_verifier_vectors.rs  lifecycle.rs  lifecycle_races.rs  lifecycle_reconnect.rs  lifecycle_retry.rs  profiles.rs  protocol_ndjson.rs  protocol_v1.rs  stop.rs  watch.rs  worker_vectors.rs
zeroshot-rust/: Cargo.toml
zeroshot-rust/src/: artifact_store.rs  cluster_ledger.rs  execution.rs  fault.rs  issue_provider.rs  ledger.rs  lib.rs  observability.rs  provider_value.rs  scheduler.rs  source_code_provider.rs
zeroshot-rust/src/artifact_store/: fake.rs  local_cas.rs
zeroshot-rust/src/cluster_ledger/: adapters.rs  commit.rs  error.rs  mutations.rs  record.rs  replay.rs  store.rs
zeroshot-rust/src/execution/: driver.rs  local.rs  process.rs  types.rs
zeroshot-rust/src/fault/: redaction.rs  taxonomy.rs
zeroshot-rust/src/issue_provider/: contracts.rs  evidence.rs  registry.rs
zeroshot-rust/src/ledger/: adapters.rs  fold.rs  identity.rs  record.rs  sqlite.rs  store.rs  validation.rs
zeroshot-rust/src/provider_value/: macros.rs
zeroshot-rust/src/source_code_provider/: evidence.rs  operation.rs  registry.rs  repository.rs
zeroshot-rust/tests/: architecture.rs  artifact_store.rs  backend_boundary.rs  cluster_ledger_replay.rs  execution_runtime_contract.rs  fault_contract.rs  ledger_crash_points.rs  ledger_store_contract.rs  legacy_ledger_store_compatibility.rs  local_cas.rs  local_execution_runtime.rs  local_process_runner.rs  observability_contract.rs  provider_bounds.rs  provider_contracts.rs  scheduler_contract.rs  sqlite_ledger.rs
zeroshot-rust/tests/cluster_ledger_replay/: protocol.rs  races.rs  snapshot_race_store.rs  validation.rs
zeroshot-rust/tests/local_cas/: recovery.rs
zeroshot-rust/tests/provider_bounds/: cases.rs
zeroshot-rust/tests/provider_contracts/: cases.rs  merge_evidence.rs
zeroshot-rust/tests/support/: architecture.rs  execution_contract.rs  execution_runtime.rs  ledger.rs  ledger_admission.rs  ledger_contract.rs  mod.rs  scheduler.rs
(+1057 files in other folders)
