[workspace]
resolver = "2"
members = [
  "crates/openengine-cluster-protocol",
  "crates/openengine-cluster-server",
  "crates/openengine-cluster-client",
  "crates/openengine-cluster-testkit",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/the-open-engine/zeroshot"

[workspace.dependencies]
async-trait = "0.1.89"
schemars = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["io-std", "io-util", "macros", "process", "rt-multi-thread", "sync"] }

openengine-cluster-protocol = { path = "crates/openengine-cluster-protocol" }
openengine-cluster-server = { path = "crates/openengine-cluster-server" }
openengine-cluster-client = { path = "crates/openengine-cluster-client" }
openengine-cluster-testkit = { path = "crates/openengine-cluster-testkit" }
