# Standalone workspace (own [workspace] table => not pulled into the zeroshot root workspace).
# Minimal core of the capsule workspace data plane. See README.md for the drop-in mapping
# onto zeroshot-cloud. S3 is behind the `s3` feature so the core compiles/measures without
# the heavy AWS SDK; the CPU-bound chunk/hash/compress rate (the open question) needs no S3.
[workspace]

[package]
name = "capsule-workspace-core"
version = "0.1.0"
edition = "2021"
description = "Minimal, interface-compatible core of the capsule workspace storage data plane"
license = "MIT"

[dependencies]
sha2 = "0.10"
zstd = "0.13"
fastcdc = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
walkdir = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

# optional real S3 backend (drop-in for the node daemon); not needed for CPU-rate measurement.
# Feature flags mirror zeroshot-cloud's AWS deps (default-features=false + behavior-version-latest +
# default-https-client + rt-tokio) so the shared aws-smithy runtime resolves the same way.
aws-config = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "default-https-client",
    "rt-tokio",
], optional = true }
aws-sdk-s3 = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "default-https-client",
    "rt-tokio",
], optional = true }
# explicit driver features (rt/net/time) so `enable_all()` doesn't silently depend on the AWS SDK's
# transitive tokio feature set (reviewer N1). Shared by the `s3` and `pg` adapters (each holds a
# bounded multi-thread runtime + block_on inside the sync trait methods).
tokio = { version = "1", features = ["rt-multi-thread", "net", "time"], optional = true }

# optional real Postgres LineageStore + block_ref liveness clock (drop-in for the node daemon).
# Native PgPool, 100% runtime `sqlx::query` (no compile-time macros / no build-time DATABASE_URL),
# schema via `sqlx::raw_sql(include_str!(...))` — mirrors zeroshot-cloud (pins sqlx =0.9.0). No TLS
# backend: the local/test path is sslmode=disable; add `tls-rustls` when a real RDS needs TLS.
sqlx = { version = "0.9", default-features = false, features = [
    "postgres",
    "runtime-tokio",
], optional = true }

[features]
default = []
# real S3 BlobStore (holds a bounded multi-thread tokio runtime, block_on inside sync trait methods)
s3 = ["dep:aws-config", "dep:aws-sdk-s3", "dep:tokio"]
# real Postgres LineageStore + PgRefClock (bounded multi-thread runtime, block_on inside sync methods)
pg = ["dep:sqlx", "dep:tokio"]

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
