[package]
name = "zeroshot-rust"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "zeroshot_engine"
path = "src/lib.rs"

[[bin]]
name = "zeroshot-rust"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
fs2.workspace = true
openengine-cluster-protocol.workspace = true
openengine-cluster-server.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
