[package]
name = "openengine-cluster-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
openengine-cluster-protocol = { path = "../openengine-cluster-protocol" }
openengine-cluster-server = { path = "../openengine-cluster-server" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

