[package]
name = "openengine-cluster-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
openengine-cluster-protocol = { path = "../openengine-cluster-protocol" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
