[package]
name = "openengine-cluster-testkit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
openengine-cluster-protocol = { path = "../openengine-cluster-protocol" }
openengine-cluster-server = { path = "../openengine-cluster-server" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
openengine-cluster-client = { path = "../openengine-cluster-client" }

