[package]
name = "openengine-cluster-testkit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
openengine-cluster-client.workspace = true
openengine-cluster-protocol.workspace = true
openengine-cluster-server.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
jsonschema.workspace = true
sha2.workspace = true
tokio.workspace = true
